test/custom/elaboration/bad/coreml_custom_record.mle
type t = { x : int }

let r : t = { x = () }[]
